--- a/fancyss/ss/rules/gfwlist.conf
+++ b/fancyss/ss/rules/gfwlist.conf
@@ -88,6 +88,8 @@ server=/.1mobile.com/127.0.0.1#7913
 ipset=/.1mobile.com/gfwlist
 server=/.1mobile.tw/127.0.0.1#7913
 ipset=/.1mobile.tw/gfwlist
+server=/.1point3acres.com/127.0.0.1#7913
+ipset=/.1point3acres.com/gfwlist
 server=/.1pondo.tv/127.0.0.1#7913
 ipset=/.1pondo.tv/gfwlist
 server=/.2000fun.com/127.0.0.1#7913
@@ -276,6 +278,8 @@ server=/.91jinman.com/127.0.0.1#7913
 ipset=/.91jinman.com/gfwlist
 server=/.91porn.com/127.0.0.1#7913
 ipset=/.91porn.com/gfwlist
+server=/.91porny.com/127.0.0.1#7913
+ipset=/.91porny.com/gfwlist
 server=/.91vps.club/127.0.0.1#7913
 ipset=/.91vps.club/gfwlist
 server=/.92ccav.com/127.0.0.1#7913
@@ -904,6 +908,8 @@ server=/.atv-ps.amazon.com/127.0.0.1#7913
 ipset=/.atv-ps.amazon.com/gfwlist
 server=/.auctions.yahoo.co.jp/127.0.0.1#7913
 ipset=/.auctions.yahoo.co.jp/gfwlist
+server=/.audacy.com/127.0.0.1#7913
+ipset=/.audacy.com/gfwlist
 server=/.auntology.fandom.com/127.0.0.1#7913
 ipset=/.auntology.fandom.com/gfwlist
 server=/.authorizeddns.net/127.0.0.1#7913
@@ -2020,6 +2026,8 @@ server=/.cdpa.url.tw/127.0.0.1#7913
 ipset=/.cdpa.url.tw/gfwlist
 server=/.cdpeu.org/127.0.0.1#7913
 ipset=/.cdpeu.org/gfwlist
+server=/.cdpuk.co.uk/127.0.0.1#7913
+ipset=/.cdpuk.co.uk/gfwlist
 server=/.cdpusa.org/127.0.0.1#7913
 ipset=/.cdpusa.org/gfwlist
 server=/.cdpweb.org/127.0.0.1#7913
@@ -2450,6 +2458,8 @@ server=/.cna.com.tw/127.0.0.1#7913
 ipset=/.cna.com.tw/gfwlist
 server=/.cnbbnews.wordpress.com/127.0.0.1#7913
 ipset=/.cnbbnews.wordpress.com/gfwlist
+server=/.cnbeta.com.tw/127.0.0.1#7913
+ipset=/.cnbeta.com.tw/gfwlist
 server=/.cn.dayabook.com/127.0.0.1#7913
 ipset=/.cn.dayabook.com/gfwlist
 server=/.cnd.org/127.0.0.1#7913
@@ -2854,8 +2864,6 @@ server=/.dawangidc.com/127.0.0.1#7913
 ipset=/.dawangidc.com/gfwlist
 server=/.daylife.com/127.0.0.1#7913
 ipset=/.daylife.com/gfwlist
-server=/.dbc.hk/127.0.0.1#7913
-ipset=/.dbc.hk/gfwlist
 server=/.dbgjd.com/127.0.0.1#7913
 ipset=/.dbgjd.com/gfwlist
 server=/.db.tt/127.0.0.1#7913
@@ -2882,6 +2890,8 @@ server=/.ddns.net/127.0.0.1#7913
 ipset=/.ddns.net/gfwlist
 server=/.ddns.us/127.0.0.1#7913
 ipset=/.ddns.us/gfwlist
+server=/.deadhouse.org/127.0.0.1#7913
+ipset=/.deadhouse.org/gfwlist
 server=/.deadline.com/127.0.0.1#7913
 ipset=/.deadline.com/gfwlist
 server=/.deaftone.com/127.0.0.1#7913
@@ -3954,6 +3964,8 @@ server=/.firstpost.com/127.0.0.1#7913
 ipset=/.firstpost.com/gfwlist
 server=/.firstrade.com/127.0.0.1#7913
 ipset=/.firstrade.com/gfwlist
+server=/.fish.audio/127.0.0.1#7913
+ipset=/.fish.audio/gfwlist
 server=/.flagsonline.it/127.0.0.1#7913
 ipset=/.flagsonline.it/gfwlist
 server=/.flecheinthepeche.fr/127.0.0.1#7913
@@ -5272,6 +5284,8 @@ server=/.grindr.com/127.0.0.1#7913
 ipset=/.grindr.com/gfwlist
 server=/.grotty-monday.com/127.0.0.1#7913
 ipset=/.grotty-monday.com/gfwlist
+server=/.ground.news/127.0.0.1#7913
+ipset=/.ground.news/gfwlist
 server=/.grow.google/127.0.0.1#7913
 ipset=/.grow.google/gfwlist
 server=/.gs-discuss.com/127.0.0.1#7913
@@ -5816,6 +5830,8 @@ server=/.hoyolab.com/127.0.0.1#7913
 ipset=/.hoyolab.com/gfwlist
 server=/.hpa.gov.tw/127.0.0.1#7913
 ipset=/.hpa.gov.tw/gfwlist
+server=/.hpjav.com/127.0.0.1#7913
+ipset=/.hpjav.com/gfwlist
 server=/.hqcdp.org/127.0.0.1#7913
 ipset=/.hqcdp.org/gfwlist
 server=/.hqjapanesesex.com/127.0.0.1#7913
@@ -5842,6 +5858,8 @@ server=/.hrweb.org/127.0.0.1#7913
 ipset=/.hrweb.org/gfwlist
 server=/.hrw.org/127.0.0.1#7913
 ipset=/.hrw.org/gfwlist
+server=/.hsex.men/127.0.0.1#7913
+ipset=/.hsex.men/gfwlist
 server=/.hsjp.net/127.0.0.1#7913
 ipset=/.hsjp.net/gfwlist
 server=/.hsselite.com/127.0.0.1#7913
@@ -5992,6 +6010,8 @@ server=/.iask.ca/127.0.0.1#7913
 ipset=/.iask.ca/gfwlist
 server=/.iav19.com/127.0.0.1#7913
 ipset=/.iav19.com/gfwlist
+server=/.iavian.net/127.0.0.1#7913
+ipset=/.iavian.net/gfwlist
 server=/.ibiblio.org/127.0.0.1#7913
 ipset=/.ibiblio.org/gfwlist
 server=/.ibit.am/127.0.0.1#7913
@@ -6298,6 +6318,8 @@ server=/.info-graf.fr/127.0.0.1#7913
 ipset=/.info-graf.fr/gfwlist
 server=/.ingress.com/127.0.0.1#7913
 ipset=/.ingress.com/gfwlist
+server=/.inherit.live/127.0.0.1#7913
+ipset=/.inherit.live/gfwlist
 server=/.initiativesforchina.org/127.0.0.1#7913
 ipset=/.initiativesforchina.org/gfwlist
 server=/.inkbunny.net/127.0.0.1#7913
@@ -9488,6 +9510,8 @@ server=/.radioaustralia.net.au/127.0.0.1#7913
 ipset=/.radioaustralia.net.au/gfwlist
 server=/.radio-canada.ca/127.0.0.1#7913
 ipset=/.radio-canada.ca/gfwlist
+server=/.radio-en-ligne.fr/127.0.0.1#7913
+ipset=/.radio-en-ligne.fr/gfwlist
 server=/.radio.garden/127.0.0.1#7913
 ipset=/.radio.garden/gfwlist
 server=/.radiohilight.net/127.0.0.1#7913
@@ -10270,6 +10294,8 @@ server=/.slaytizle.com/127.0.0.1#7913
 ipset=/.slaytizle.com/gfwlist
 server=/.sleazydream.com/127.0.0.1#7913
 ipset=/.sleazydream.com/gfwlist
+server=/.sleazyfork.org/127.0.0.1#7913
+ipset=/.sleazyfork.org/gfwlist
 server=/.slheng.com/127.0.0.1#7913
 ipset=/.slheng.com/gfwlist
 server=/.slickvpn.com/127.0.0.1#7913
@@ -10490,6 +10516,8 @@ server=/.spotify.com/127.0.0.1#7913
 ipset=/.spotify.com/gfwlist
 server=/.spreadshirt.es/127.0.0.1#7913
 ipset=/.spreadshirt.es/gfwlist
+server=/.spreaker.com/127.0.0.1#7913
+ipset=/.spreaker.com/gfwlist
 server=/.spring4u.info/127.0.0.1#7913
 ipset=/.spring4u.info/gfwlist
 server=/.springboardplatform.com/127.0.0.1#7913
@@ -11374,6 +11402,8 @@ server=/.tiktok.com/127.0.0.1#7913
 ipset=/.tiktok.com/gfwlist
 server=/.tiktokv.com/127.0.0.1#7913
 ipset=/.tiktokv.com/gfwlist
+server=/.tiktokv.us/127.0.0.1#7913
+ipset=/.tiktokv.us/gfwlist
 server=/.tiltbrush.com/127.0.0.1#7913
 ipset=/.tiltbrush.com/gfwlist
 server=/.timdir.com/127.0.0.1#7913
@@ -13618,6 +13648,8 @@ server=/.zippyshare.com/127.0.0.1#7913
 ipset=/.zippyshare.com/gfwlist
 server=/.zkaip.com/127.0.0.1#7913
 ipset=/.zkaip.com/gfwlist
+server=/.z-lib.io/127.0.0.1#7913
+ipset=/.z-lib.io/gfwlist
 server=/.z-lib.org/127.0.0.1#7913
 ipset=/.z-lib.org/gfwlist
 server=/.zmw.cn/127.0.0.1#7913
